tests/purs/failing/NewtypeInstance3.purs
-- @shouldFailWith InvalidNewtypeInstance
module Main where

import Prelude

class Nullary

derive newtype instance nullary :: Nullary
